[workspace]
members = ["lib", "cli"]

[patch.crates-io]
# https://github.com/abonander/img_hash/pull/30
# * Updates to use image 0.22
# * Fixes a bug with to/from_base64
img_hash = { git = "https://github.com/EmbarkStudios/img_hash.git", rev = "c40da78" }
zune-jpeg = { git = "https://github.com/ironpeak/zune-image", rev = "eebb01b72c07aaf8b00200d9d87d4cba6f01651f" }
