[workspace]
members = ["lib", "cli"]

[patch.crates-io]
# https://github.com/abonander/img_hash/pull/30
# * Updates to use image 0.22
# * Fixes a bug with to/from_base64
img_hash = { git = "https://github.com/EmbarkStudios/img_hash.git", rev = "c40da78" }
# patched zune-jpeg to avoid problems when creating dynamic libraries (i.e. Bevy feature dynamic)
# should be dropped as soon as image start depending on zune-jpeg 5.0, currently in beta
zune-jpeg = { git = "https://github.com/ironpeak/zune-image", rev = "eebb01b72c07aaf8b00200d9d87d4cba6f01651f" }
